# recastnavigation

./: .travis.yml  CMakeLists.txt  appveyor.yml
.github/workflows/: Build.yaml
DebugUtils/: CMakeLists.txt
DebugUtils/Include/: DetourDebugDraw.h
DebugUtils/Source/: DebugDraw.cpp  DetourDebugDraw.cpp  RecastDebugDraw.cpp  RecastDump.cpp
Detour/Include/: DetourCommon.h  DetourNavMesh.h  DetourNavMeshBuilder.h  DetourNavMeshQuery.h  DetourNode.h
Detour/Source/: DetourAlloc.cpp  DetourAssert.cpp  DetourCommon.cpp  DetourNavMesh.cpp  DetourNavMeshBuilder.cpp  DetourNavMeshQuery.cpp  DetourNode.cpp
DetourCrowd/Include/: DetourCrowd.h  DetourLocalBoundary.h  DetourPathCorridor.h  DetourPathQueue.h
DetourCrowd/Source/: DetourCrowd.cpp  DetourLocalBoundary.cpp  DetourObstacleAvoidance.cpp  DetourPathCorridor.cpp  DetourPathQueue.cpp  DetourProximityGrid.cpp
DetourTileCache/Include/: DetourTileCache.h  DetourTileCacheBuilder.h
DetourTileCache/Source/: DetourTileCache.cpp  DetourTileCacheBuilder.cpp
Recast/Include/: Recast.h
Recast/Source/: Recast.cpp  RecastAlloc.cpp  RecastArea.cpp  RecastAssert.cpp  RecastContour.cpp  RecastFilter.cpp  RecastLayers.cpp  RecastMesh.cpp  RecastMeshDetail.cpp  RecastRasterization.cpp  RecastRegion.cpp
RecastDemo/: CMakeLists.txt  premake5.lua
RecastDemo/Contrib/: stb_truetype.h
RecastDemo/Contrib/fastlz/: fastlz.c
RecastDemo/Include/: ConvexVolumeTool.h  CrowdTool.h  InputGeom.h  NavMeshPruneTool.h  NavMeshTesterTool.h  OffMeshConnectionTool.h  Sample.h  SampleInterfaces.h  Sample_Debug.h  Sample_SoloMesh.h  Sample_TempObstacles.h  Sample_TileMesh.h  TestCase.h
RecastDemo/Source/: ChunkyTriMesh.cpp  ConvexVolumeTool.cpp  CrowdTool.cpp  Filelist.cpp  InputGeom.cpp  MeshLoaderObj.cpp  NavMeshPruneTool.cpp  NavMeshTesterTool.cpp  OffMeshConnectionTool.cpp  PerfTimer.cpp  Sample.cpp  SampleInterfaces.cpp  Sample_Debug.cpp  Sample_SoloMesh.cpp  Sample_TempObstacles.cpp  Sample_TileMesh.cpp  TestCase.cpp  ValueHistory.cpp  imgui.cpp  imguiRenderGL.cpp  main.cpp
Tests/: CMakeLists.txt
Tests/Detour/: Tests_Detour.cpp
Tests/Integration/: Issue729.cpp
Tests/Recast/: Tests_Recast.cpp  Tests_RecastFilter.cpp
